# caliper-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: COEFFICIENT_AUDIT.md  SCHEMA.md
examples/: README.md  compute_score.error-missing-input.json  compute_score.meld-na.json  convert_units.creatinine.json  extract_inputs.lab-note.json  prepare_score.meld-na.json
src/: ingest.rs  lib.rs  mcp.rs  registry.rs  tools.rs  units.rs
src/scores/: apgar.rs  apls_weight.rs  cha2ds2_vasc.rs  child_pugh.rs  ckd_epi_2021.rs  cockcroft_gault.rs  crb_65.rs  curb_65.rs  fib_4.rs  gcs.rs  glasgow_blatchford.rs  has_bled.rs  meld_3.rs  meld_na.rs  mews.rs  mod.rs  news2.rs  padua_vte.rs  perc.rs  pews.rs  qsofa.rs  schwartz_egfr.rs  sirs.rs  sofa.rs  wells_pe.rs  westley_croup.rs
tests/: discipline.rs  fixtures.rs  ingest.rs  server.rs  solve_series.rs
tests/fixtures/: apgar.json  apls-weight.json  cha2ds2-vasc.json  child-pugh.json  ckd-epi-2021.json  cockcroft-gault.json  crb-65.json  curb-65.json  fib-4.json  gcs.json  glasgow-blatchford.json  has-bled.json  meld-3.json  meld-na.json  mews.json  news2.json  padua-vte.json  perc.json  pews.json  qsofa.json  schwartz-egfr.json  sirs.json  sofa.json  wells-pe.json  westley-croup.json
